<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App. 기본 -->
    <string name="app_name">Mobile DP</string>
    <string name="short_app_name">DP</string>
    <string name="empty"></string>
    
    <!-- 오류 메시지 -->
    <string name="list_loading_fail">목록 데이터를 불러오는데 실패했습니다.</string>
    <string name="view_loading_fail">본문 로딩을 실패했습니다.</string>
    <string name="search_loading_fail">검색 처리를 실패했습니다.</string>
    <string name="filter_loading_fail">필터 정보를 가져오는데 실패했습니다.</string>
    <string name="network_connection_fail">네트워크가 불안하여 연결할 수 없습니다.\n잠시후 다시 시도해주세요.</string>
    <string name="write_document_fail">글 등록을 실패했습니다.</string>
    <string name="write_comment_fail">댓글 등록을 실패했습니다.</string>
    <string name="not_exist_document_msg">해당 글이 존재하지 않습니다.</string>
    <string name="not_exist_notification_msg">알림이 없습니다.</string>
    
    <!-- 게시판 목록 -->
    <string name="bbs_favorite_empty">등록된 즐겨찾기 게시판이 없습니다.</string>
    
    <!-- 글 목록 -->
    <string name="list_notice_no">[공지]</string>
    <string name="list_context_menu_search_nick">닉네임으로 검색</string>
    <string name="list_context_menu_search_id">아이디로 검색</string>
    <string name="list_context_menu_document_delete">글 삭제</string>
    <string name="list_context_menu_filter_add">필터에 추가</string>
    <string name="list_context_menu_filter_remove">필터에서 제거</string>
    
    <!-- 로그인 -->
    <string name="login_dialog_title">로그인</string>
    <string name="login_username_hint">아이디를 입력해주세요.</string>
    <string name="login_password_hint">비밀번호를 입력해주세요.</string>
    <string name="login_request_message">로그인을 처리하고 있습니다.\n잠시만 기다려주세요.</string>
    <string name="login_request_fail_message">로그인에 실패했습니다.</string>
    <string name="login_request_wrong_message">로그인 정보가 올바르지 않습니다.</string>
    <string name="login_request_success_message">로그인 되었습니다.</string>
    <string name="prompt_username">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="login_progress_signing_in">로그인 시도중&#8230;</string>
    
    <!-- 글/댓글쓰기 -->
    <string name="write_category_prompt">게시판을 선택해주세요.</string>
    <string name="write_title">제목</string>
    <string name="write_title_hint">제목을 입력해주세요.</string>
    <string name="write_title_limit">제목은 최대 100글자입니다.</string>
    <string name="write_content_hint">글내용을 입력해주세요.</string>
    <string name="write_tag_hint">태그를 입력해주세요.(옵션)</string>
    <string name="write_comment_content_hint">댓글내용을 입력해주세요.</string>
    <string name="write_progress_sending_in">글 등록중&#8230;</string>
    <string name="write_comment_progress_sending_in">댓글 등록중&#8230;</string>
    <string name="write_enter_tag_text">DPⓐ</string>
    <string name="write_phone_description">사진첨부</string>
    <string name="write_gallery_title">사진을 선택해주세요.</string>
    <string name="write_gallery_subtitle">선택한 순서와 상관없이 목록 순서대로 등록됩니다.</string>
    <string name="write_flickr_auth_request">플리커에 권한을 요청합니다.</string>
    <string name="write_tag_empty">등록된 태그가 없습니다.</string>
    
    <!-- 액션바 -->
    <string name="action_bar_about">정보</string>
    <string name="action_bar_setting">설정</string>
    <string name="action_bar_refresh">새로고침</string>
    <string name="action_bar_write_document">글쓰기</string>
    <string name="action_bar_write_comment">댓글쓰기</string>
    <string name="action_bar_write_childcmt">덧플쓰기</string>
    <string name="action_bar_modify">글수정</string>
    <string name="action_bar_search">검색</string>
    <string name="action_bar_search_hint">검색어를 입력하세요.</string>
    <string name="action_bar_share_with">공유하기…</string>
    <string name="action_bar_login">로그인</string>
    <string name="action_bar_cancel">취소</string>
    <string name="action_bar_register">등록</string>
    <string name="action_bar_complete">완료</string>
    <string name="action_bar_badge">0</string>
    <string name="action_bar_notification">알림</string>
    
    <!-- 글 상세 -->
    <string name="view_menu_overflow">더보기</string>
    <string name="view_menu_original">원문보기</string>
    <string name="view_menu_recommend">추천하기</string>
    <string name="view_menu_save_to_mydp">MY디피에저장</string>
    <string name="view_menu_copy_url">URL복사</string>
    <string name="view_menu_modify">수정하기</string>
    <string name="view_menu_delete">삭제하기</string>
    
    <!-- 다이얼로그 -->
    <string name="alert_dialog_warn">오류</string>
    <string name="alert_dialog_alert">알림</string>
    <string name="alert_dialog_ok">확인</string>
    <string name="alert_dialog_cancel">취소</string>
    <string name="alert_dialog_close">닫기</string>
    <string name="alert_dialog_remove">삭제</string>
    <string name="alert_dialog_comment">댓글옵션</string>
    <string name="alert_dialog_version">버전 업데이트</string>
    <string name="alert_account_delete_message">인증된 계정 정보를 삭제하시겠습니까?</string>
    <string name="alert_flickr_delete_message">인증된 플리커(Flickr) 정보를 삭제하시겠습니까?</string>
    <string name="filter_not_use_message">회원계정 정보 인증 후 이용할 수 있습니다.</string>
    <string name="filter_not_exist_message">게시판 목록이나 본문 보기에서 특정회원을 필터 등록하시면 삭제할 수 있습니다.</string>
    <string name="write_exist_text_message">작성중인 내용이 있습니다.\n현재 화면을 종료하시겠습니까?</string>
    <string name="flickr_auth_alert_message">이미지 업로드는 플리커(Flickr) 계정을 사용합니다.\n회원님의 플리커(Flickr) 계정과 연동하시겠습니까?</string>
    <string name="view_recommend_message">추천을 요청하고 있습니다.</string>
    <string name="view_save_message">MY 디피에 저장하고 있습니다.</string>
    <string name="view_delete_message">게시물을 정말로 삭제하시겠습니까?</string>
    <string name="view_deleting_message">게시물을 삭제요청하고 있습니다.</string>
    <string name="cmt_recommend_message">댓글추천을 요청하고 있습니다.</string>
    <string name="cmt_deleting_message">댓글을 삭제요청하고 있습니다.</string>
    <string name="cmt_delete_confirm_message">정말 댓글을 삭제하시겠습니까?</string>
    
    <!-- 댓글 옵션 목록 -->
    <string name="cmt_option_write">덧플쓰기</string>
    <string name="cmt_option_recommend">댓글추천</string>
    <string name="cmt_option_parent_delete">댓글삭제</string>
    <string name="cmt_option_child_delete">덧플삭제</string>
    
    <!-- 컨텍스트 메뉴 -->
    <string name="context_menu_copy_url">URL 복사</string>
    <string name="context_menu_open_browser">브라우저로 열기</string>
    <string name="context_menu_share_url">링크 공유</string>
    <string name="context_menu_save_image">이미지 저장</string>
    
    <!-- 토스트 메시지 -->
    <string name="toast_search_suggests_text_limit">검색어는 최소 2글자 이상 입력해주세요.</string>
    <string name="toast_login_id_validation_message">아이디를 입력해주세요.</string>
    <string name="toast_login_pw_validation_message">비밀번호를 입력해주세요.</string>
    <string name="toast_need_login_message">계정 인증 후 이용해주세요.</string>
    <string name="toast_write_document_success_message">글이 등록되었습니다.</string>
    <string name="toast_write_comment_success_message">댓글이 등록되었습니다.</string>
    <string name="toast_delete_comment_success_message">댓글이 삭제되었습니다.</string>
    <string name="toast_flickr_authorization_success_message">플리커 인증 성공</string>
    <string name="toast_flickr_authorization_failed_message">플리커 인증 실패</string>
    <string name="toast_view_recommend_success_message">추천되었습니다.</string>
    <string name="toast_view_recommend_already_message">이미 추천하신 글입니다.</string>
    <string name="toast_view_save_success_message">MY 디피에 저장되었습니다.</string>
    <string name="toast_view_save_already_message">MY 디피 저장을 실패했습니다.</string>
    <string name="toast_share_url_fail_message">공유하기 URL 호출을 실패했습니다.</string>
    <string name="toast_filter_added_message">필터에 추가되었습니다.</string>
    <string name="toast_filter_removed_message">필터에서 제거되었습니다.</string>
    
    <!-- 설정 -->
    <string name="pref_account_preferences">계정설정</string>
    <string name="pref_account_information">회원계정 등록</string>
    <string name="pref_account_information_summary_empty">DP 계정을 등록해주세요.</string>
    <string name="pref_account_information_summary_saved">%1$s 아이디로 인증되었습니다.</string>
    <string name="pref_flickr_information">플리커(Flickr) 계정 연결</string>
    <string name="pref_flickr_information_summary_empty">인증 정보가 없습니다. 인증은 글등록시 사진첨부하면서 받으세요!</string>
    <string name="pref_flickr_information_summary_saved">%1$s 아이디로 인증되었습니다.</string>
    <string name="pref_filter_preferences">필터설정</string>
    <string name="pref_filter_list">등록된 필터목록</string>
    <string name="pref_filter_list_empty">등록된 필터목록이 없습니다.</string>
    <string name="pref_filter_list_exist">필터를 삭제하려면 터치하세요.</string>
    <string name="pref_notification_preferences">알림설정</string>
    <string name="pref_notification_active">알림 활성화</string>
    <string name="pref_notification_summary_active">알림 수신이 허용 되었습니다.</string>
    <string name="pref_notification_summary_inactive">알림 수신이 차단 되었습니다.</string>
    <string name="pref_notification_active_comment">댓글 알림</string>
</resources>
