<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  
    <item 
        android:icon="@drawable/ic_navigation_refresh" 
        android:id="@+id/menu_refresh" 
        android:title="@string/action_bar_refresh" 
        android:showAsAction="always" />
    
    <item 
        android:icon="@drawable/ic_action_social_share" 
        android:id="@+id/menu_share" 
        android:title="@string/action_bar_share_with" 
        android:showAsAction="always" />
    
    <item 
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_light" 
        android:id="@+id/menu_more" 
        android:title="@string/view_menu_overflow" 
        android:showAsAction="always">
        
        <menu>
            <item 
                android:id="@+id/menu_view_original" 
                android:title="@string/view_menu_original" 
                android:showAsAction="never" />
            
            <item 
                android:id="@+id/menu_copy_url" 
                android:title="@string/view_menu_copy_url" 
                android:showAsAction="never" />
            
            <item 
                android:id="@+id/menu_recommend" 
                android:title="@string/view_menu_recommend" 
                android:showAsAction="never" />
            
            <item 
                android:id="@+id/menu_save_mydp" 
                android:title="@string/view_menu_save_to_mydp" 
                android:showAsAction="never" />
            
            <item 
                android:id="@+id/menu_modify" 
                android:visible="false" 
                android:title="@string/view_menu_modify" 
                android:showAsAction="never" />
            <item 
                android:id="@+id/menu_delete" 
                android:visible="false" 
                android:title="@string/view_menu_delete" 
                android:showAsAction="never" />
        </menu>
    </item>
    
    <item 
        android:icon="@drawable/ic_action_settings" 
        android:id="@+id/menu_setting" 
        android:orderInCategory="100" 
        android:title="@string/action_bar_setting" 
        android:showAsAction="never" />
    
    <item 
        android:icon="@drawable/ic_action_about" 
        android:id="@+id/menu_about" 
        android:orderInCategory="101" 
        android:title="@string/action_bar_about" 
        android:showAsAction="never" />
</menu>