<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:focusable="true"
        android:hint="@string/login_username_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="128"
        android:paddingBottom="3.33dp"
        android:paddingTop="3.33dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:hint="@string/login_password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingBottom="3.33dp"
        android:paddingTop="3.33dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerHorizontal" />
    
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:measureWithLargestChild="true" >

        <Button
            android:id="@+id/negative_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_cancel" />

        <Button
            android:id="@+id/positive_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_ok" />
    </LinearLayout>

</LinearLayout>