<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
  
    <!-- Write progress -->
    <LinearLayout 
        android:gravity="center_horizontal" 
        android:layout_gravity="center" 
        android:orientation="vertical" 
        android:id="@+id/write_status" 
        android:visibility="gone" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        <ProgressBar 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="8.0dip" 
            style="?android:attr/progressBarStyleLarge" />
        <TextView 
            android:textAppearance="?android:textAppearanceMedium" 
            android:id="@+id/write_status_message" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="16.0dip" 
            android:text="@string/write_comment_progress_sending_in" 
            android:fontFamily="sans-serif-light" />
    </LinearLayout>
    
    <ScrollView 
        android:id="@+id/write_form" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        
        <LinearLayout 
            android:orientation="vertical" 
            android:padding="16.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            
            <EditText 
                android:gravity="top" 
                android:id="@+id/content_editText" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:hint="@string/write_comment_content_hint" 
                android:minLines="5" 
                android:inputType="textLongMessage|textMultiLine" 
                android:imeOptions="actionDone" />
            
            <RelativeLayout 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">
                <ImageButton 
                    android:id="@+id/attach_imageButton" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:src="@drawable/ic_action_new_picture" 
                    android:layout_alignParentRight="true" 
                    android:contentDescription="@string/write_phone_description" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</merge>